//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative  grpctest.proto


syntax = "proto3";

option go_package = "./gogrpctest";


package gogrpctest;


// service StatsDeamon {
//   rpc SendRequest (RequestParams) returns (ResponseData) {}
// }

message RequestParams {
  //частота запросов - N, по усолчанию 5
  uint64 frequency = 1; 
  //информация, усредненная за последние M секунд, по усолчанию 15 
  uint64 period = 2; 
  
}

message ResponseData {
  //float metric = 1;
  string metrics = 1;
  
}


service StreamingService {
    rpc GetDataFromStream(RequestParams) returns (stream ResponseData) {}
}